# sistema-control-flota

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/catalogos/: admin.py  api.py  models.py  schemas.py  tests.py
backend/catalogos/migrations/: 0001_initial.py  0002_seed_data.py  0003_sistema_afectado.py  0004_estatusvehiculo.py  0005_colorplaca.py  0006_alter_modelo_unique_together_alter_color_nombre_and_more.py  0008_clasevehiculo_tipocombustible.py  0009_seed_clase_combustible.py
backend/config/: api.py  settings.py
backend/dashboard/: api.py  callbacks.py  schemas.py  tests.py
backend/organizacion/: admin.py  api.py  models.py  schemas.py  tests.py
backend/organizacion/migrations/: 0001_initial.py  0002_simplify_gerencia.py  0003_seed_estados.py  0004_centrodeservicio.py  0005_alter_centrodeservicio_nombre_alter_estado_nombre_and_more.py  0006_centrodeservicio_estado.py  0007_alter_centrodeservicio_nombre.py
backend/seeds/: loaders.py
backend/seeds/catalogos/: data.json
backend/seeds/organizacion/: data.json
backend/seeds/usuarios/: data.json
backend/templates/admin/: index.html
backend/usuarios/: admin.py  api.py  auth.py  auth_api.py  models.py  roles.py  schemas.py  tests.py  usuarios_api.py  utils.py
backend/usuarios/migrations/: 0001_initial.py  0002_add_estado_to_usuario.py  0005_seed_default_users.py  (+2 more)
backend/utils/: api_helpers.py  crud_factory.py
backend/vehiculos/: admin.py  api.py  export_utils.py  models.py  schemas.py  seed_data.py  tests.py
(+50 files in other folders)
